# flow-media-player

./: .gitignore  CMakeLists.txt  README.md  download_mpv.ps1
.github/workflows/: release.yml
src/: main.cpp
